--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="icons-1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
-    <title>Royal Citizens Ministeries</title>
+    <title>Royal Citizens Ministeries <img src="./images/Royal_citizens_ministering_logo-removebg-preview.png" alt=""></title>
 </head>
 <body>
   <div class="modal hidden" id="signUp">
@@ -44,7 +44,7 @@
     </form>
   </div>
 
-  <div class="modal hidden" id="signIn">
+  <!-- <div class="modal hidden" id="signIn">
     <button class="btn--close-modal" id="close--modal">&times;</button>
     <h2 class="modal__header">
       Sign In
@@ -63,13 +63,13 @@
       <p id="message--sign--in"></p>
       <button class="btn" id="login-user" type="button">Submit &rarr;</button>
     </form>
-  </div>
+  </div> -->
   <div class="overlay hidden"></div>
     <div class="scroll scroll--hidden">&UpArrow;</div>
     <header class="header" id="head">
         <nav class="nav">
           <img
-            src="images/Royal citizens ministering logo.jpg"
+            src="./images/Royal_citizens_ministering_logo-removebg-preview.png"
             alt="Royal Citizens logo"
             class="nav__logo"
             id="logo"
@@ -87,11 +87,11 @@
             </li>
           
             <li class="nav__item">
-              <a class="nav__link" href="" id="sign--up">Sign up</a>
+              <a class="nav__link" href="#" id="sign--up">Sign up for our newsletters</a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a class="nav__link" href="" id="sign--in">Sign in</a>
-            </li>
+            </li> -->
             <!-- <li class="nav__item">
               <a class="nav__link nav__link--btn btn--show-modal" href="#"
                 >Donate</a
@@ -110,11 +110,11 @@
             </li>
           
             <li class="nav__item">
-              <a class="nav__link" href="#" id="sign--up">Sign up</a>
+              <a class="nav__link" href="#" id="sign--up">Sign up for our newsletters</a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a class="nav__link" href="#" id="sign--in">Sign in</a>
-            </li>
+            </li> -->
             <li class="nav__item">
               <a class="nav__link" href="" id="close--menu">Close Menu</a>
             </li>
