--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="icons-1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
-    <title>Royal Citizens Ministeries <img src="./images/Royal_citizens_ministering_logo-removebg-preview.png" alt=""></title>
+    <link rel="icon" type="image/x-icon" href="./images/Royal_citizens_ministering_logo-removebg-preview.png">
 </head>
 <body>
   <div class="modal hidden" id="signUp">
     <button class="btn--close-modal" id="close--modal">&times;</button>
     <h2 class="modal__header">
-      Sign up  <br />
-      to our newsletter.
+      Daily<br />
+      prayers and bible verses.
     </h2>
     <form class="modal__form">
       <div class="email--flexs">
@@ -27,7 +27,7 @@
       <label>Email Address</label>
       <input type="email"  id="email--address"/>
       </div>
-      <div class="email--flexs">
+      <!-- <div class="email--flexs">
         <label>Password</label>
         <input type="password"  id="password"/>
         <i class="bi bi-eye-fill"></i>
@@ -38,7 +38,7 @@
       <input type="password"  id="cpassword"/>
       <i class="bi bi-eye-fill" id="show--eyes"></i>
       <i class="bi bi-eye-slash-fill" id="show-slash--eyes"></i>
-      </div>
+      </div> -->
       <p id="message--sign--up"></p>
       <button class="btn" id="register--user" type="button">Submit &rarr;</button>
     </form>
@@ -87,7 +87,7 @@
             </li>
           
             <li class="nav__item">
-              <a class="nav__link" href="#" id="sign--up">Sign up for our newsletters</a>
+              <a class="nav__link" href="#" id="sign--up">Bible verses</a>
             </li>
             <!-- <li class="nav__item">
               <a class="nav__link" href="" id="sign--in">Sign in</a>
@@ -110,7 +110,7 @@
             </li>
           
             <li class="nav__item">
-              <a class="nav__link" href="#" id="sign--up">Sign up for our newsletters</a>
+              <a class="nav__link" href="#" id="sign--up">Bible verses</a>
             </li>
             <!-- <li class="nav__item">
               <a class="nav__link" href="#" id="sign--in">Sign in</a>
@@ -231,7 +231,7 @@
         </div>
       </section>
       <footer class="footer">
-        <img src="images/Royal citizens ministering logo.jpg" alt="Logo" class="footer__logo" />
+        <img src="./images/Royal_citizens_ministering_logo-removebg-preview.png" alt="Logo" class="footer__logo" />
         <p class="footer__copyright">
           &copy; Copyright by
           <a
